shell1.txt
>>> s = 'Toster'
>>> 
>>> 
>>> type(s)
<type 'str'>
>>> s[0]
'T'
>>> s[5]
'r'
>>> s[0] = 't'

Traceback (most recent call last):
  File "<pyshell#7>", line 1, in <module>
    s[0] = 't'
TypeError: 'str' object does not support item assignment
>>> s1 = s
>>> s1
'Toster'
>>> s + s1
'TosterToster'
>>> 1 + 2
3
>>> a = 1
>>> s + a

Traceback (most recent call last):
  File "<pyshell#13>", line 1, in <module>
    s + a
TypeError: cannot concatenate 'str' and 'int' objects
>>> 
>>> 
>>> s.find('t')
3
>>> 
>>> s[2]
's'
>>> s[1:3]
'os'
>>> s[:3]
'Tos'
>>> s[1:]
'oster'
>>> s[:-1]
'Toste'
>>> ================================ RESTART ================================
>>> 
75
Test string variable
>>> 
>>> 
>>> l = [1, 2, 3, 4]
>>> l[1]
2
>>> l[1:3]
[2, 3]
>>> l[0], l[3]
(1, 4)
>>> l[0] = 9
>>> l
[9, 2, 3, 4]
>>> l.append(7)
>>> l
[9, 2, 3, 4, 7]
>>> dir(l)
['__add__', '__class__', '__contains__', '__delattr__', '__delitem__', '__delslice__', '__doc__', '__eq__', '__format__', '__ge__', '__getattribute__', '__getitem__', '__getslice__', '__gt__', '__hash__', '__iadd__', '__imul__', '__init__', '__iter__', '__le__', '__len__', '__lt__', '__mul__', '__ne__', '__new__', '__reduce__', '__reduce_ex__', '__repr__', '__reversed__', '__rmul__', '__setattr__', '__setitem__', '__setslice__', '__sizeof__', '__str__', '__subclasshook__', 'append', 'count', 'extend', 'index', 'insert', 'pop', 'remove', 'reverse', 'sort']
>>> l.pop()
7
>>> l
[9, 2, 3, 4]
>>> help(l.pop)
Help on built-in function pop:

pop(...)
    L.pop([index]) -> item -- remove and return item at index (default last).
    Raises IndexError if list is empty or index is out of range.

\
>>> s

Traceback (most recent call last):
  File "<pyshell#37>", line 1, in <module>
    s
NameError: name 's' is not defined
>>> s = 'test'
>>> l
[9, 2, 3, 4]
>>> 
>>> 
>>> d = {'a': 2, 'b': 3}
>>> d
{'a': 2, 'b': 3}
>>> d['c'] = [1, 3, 9]
>>> d
{'a': 2, 'c': [1, 3, 9], 'b': 3}
>>> d.update({'d': 56.7})
>>> d
{'a': 2, 'c': [1, 3, 9], 'b': 3, 'd': 56.7}
>>> l
[9, 2, 3, 4]
>>> 
>>> 
>>> for i in l:
    print(i)

    
9
2
3
4
>>> for i in l:
    print(i)

    
9
2
3
4
>>> for i in l:
print(i)
  File "<pyshell#56>", line 2
    print(i)
        ^
IndentationError: expected an indented block
>>> ================================ RESTART ================================
>>> 
Hello World
14789
>>> ================================ RESTART ================================
>>> 
What is your name? 'Greg'
Hello Greg! Nice to meet you.
>>> ================================ RESTART ================================
>>> 
Which side of the coin falls? [1 or 2] 1
Nope, my side was 2
>>> ================================ RESTART ================================
>>> 
Which side of the coin falls? [1 or 2] 1
You won!
>>> 
>>> 
>>> 
>>> 12 == 13
False
>>> a = 56
>>> b = 45
>>> a == b
False
>>> a == 56
True
>>> a > b
True
>>> a < b
False
>>> a =< b
SyntaxError: invalid syntax
>>> a <= b
False
>>> a => b
SyntaxError: invalid syntax
>>> a >= b
True
>>> 
>>> a != b
True
>>> t = (2, 5, 6)
>>> for i in t:
    print(i)

    
2
5
6
>>> t[0]
2
>>> t[0] = 'a'

Traceback (most recent call last):
  File "<pyshell#78>", line 1, in <module>
    t[0] = 'a'
TypeError: 'tuple' object does not support item assignment
>>> t[99]

Traceback (most recent call last):
  File "<pyshell#79>", line 1, in <module>
    t[99]
IndexError: tuple index out of range
>>> d

Traceback (most recent call last):
  File "<pyshell#80>", line 1, in <module>
    d
NameError: name 'd' is not defined
>>> d = {'a': 2, 'b': 3}
>>> d
{'a': 2, 'b': 3}
>>> i = 4

